Increases body padding to avoid horizontal scrolling on small viewports

--- a/css/sass/_general.scss
+++ b/css/sass/_general.scss
@@ -1,5 +1,5 @@
 body {
-  padding: 20px 10px 40px;
+  padding: 20px 15px 40px;
   overflow-y: scroll;
   background-color: #f5f5f5;
 }
